Add upload file verification pipeline